<resources>
  <string name="app_name">Pokedex</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search_text_placeholder">Type something…</string>
  <string name="rubel_currency_symbol">₽</string>
  <string name="base_power">Base Power</string>
  <string name="accurary">Accurary</string>
  <string name="pp">PP</string>
  <string name="used_in_battle">Used in Battle</string>
  <string name="hp_text">HP</string>
  <string name="weaknesses_text">Weaknesses</string>
  <string name="abilities_text">Abilities</string>
  <string name="breeding_text">Breeding</string>
  <string name="gender_text">Gender</string>
  <string name="hatch_time_text">Hatch time</string>
  <string name="egg_group_text">Egg group</string>
  <string name="capture_text">Capture</string>
  <string name="habitat_text">Habitat</string>
  <string name="generation_text">Generation</string>
  <string name="capture_rate">Capture Rate</string>
  <string name="sprites_text">Sprites</string>
  <string name="item_not_found">No Item Found</string>
</resources>